# garlic

./: .gitignore  AGENTS.MD  CMakeLists.txt  LICENSE  README.md  a.out  main.cpp  run.sh
src/: CMakeLists.txt  benchmark.hpp  car.hpp  cell_type.hpp  main.cpp  pch.cmake  public_column_info.hpp  table.hpp  table_content.hpp
src/abstract_syntax_tree/: CMakeLists.txt  binary_logical_condition.cpp  binary_logical_condition.hpp  binary_math_expression.cpp  binary_math_expression.hpp  cell_accept_math_op.hpp  cell_boolean_value.cpp  cell_boolean_value.hpp  cell_comparable.hpp  cell_error_value.cpp  cell_error_value.hpp  cell_float_value.cpp  cell_float_value.hpp  cell_int_value.cpp  cell_int_value.hpp  cell_string_value.cpp  cell_string_value.hpp  cell_string_view_value.cpp  cell_string_view_value.hpp  cell_value.hpp  cell_value_gatherer.hpp  cell_value_gatherer_impl.cpp  cell_value_gatherer_impl.hpp  compare_condition.cpp  compare_condition.hpp  condition.hpp  condition_select_query.cpp  condition_select_query.hpp  constant_condition.hpp  constant_expression.hpp  expected_cell_value.hpp  expression.hpp  expression_select_query.cpp  expression_select_query.hpp  get_cell_primitive.hpp  get_cell_type.hpp  logical_operator.hpp  query.hpp  runtime_error.hpp  select_query.cpp  (+21 more)
src/condition_tree/: CMakeLists.txt  binary_logical_condition.cpp  binary_logical_condition.hpp  binary_math_expression.cpp  binary_math_expression.hpp  binary_operation.hpp  binary_operator.hpp  cell_accept_math_op.hpp  cell_float_value.cpp  cell_float_value.hpp  cell_int_value.cpp  cell_int_value.hpp  cell_string_value.cpp  cell_string_value.hpp  cell_value.hpp  compare_condition.cpp  compare_condition.hpp  condition.hpp  condition_resolver.hpp  condition_select_query.cpp  condition_select_query.hpp  constant_expression.hpp  equals_condition.hpp  expression.hpp  expression_select_query.cpp  expression_select_query.hpp  get_cell_type.hpp  logic_condition.hpp  logical_operator.hpp  math_expression.cpp  math_expression.hpp  math_operation.hpp  query.hpp  query_result.hpp  string_query_result.hpp  table_condition_resolver.hpp  table_expression.hpp  table_value_expression.cpp  table_value_expression.hpp  table_value_gatherer.hpp  (+7 more)
src/headers/: generic_types.hpp  std.hpp
src/sql_parser/: CMakeLists.txt  \  driver.cpp  driver.hpp  dumb_cell_value_gatherer.hpp  dumb_table_value_gatherer.hpp  error_printer.cpp  error_printer.hpp  error_stage.hpp  lexer.l  lexer.ll  literals_converter.cpp  literals_converter.hpp  manual_io.cpp  manual_io.hpp  parser.y  parser.yy  parser_cell_assignment.hpp  parser_engine.cpp  parser_engine.hpp  parsing_context.cpp  parsing_context.hpp  parsing_error.hpp  parsing_location.cpp  parsing_location.hpp  parsing_result.hpp  parsing_session.cpp  parsing_session.hpp  position.cpp  position.hpp  query_input.cpp  query_input.hpp  query_io.cpp  query_io.hpp  sql_ast_executor.cpp  sql_ast_executor.hpp  sql_repl.cpp  sql_repl.hpp  table_value_gatherer_factory.hpp  test_main.c  (+3 more)
src/table/: CMakeLists.txt  aboba.cpp  byte_matrix.cpp  byte_matrix.hpp  cell_type.hpp  column_info.hpp  database.hpp  expected_column_type.hpp  public_column_info.hpp  table.cpp  table.hpp  table_column_reference.hpp  table_column_type_gatherer.hpp  table_content.cpp  table_content.hpp  table_header_gatherer.hpp  table_value_gatherer.hpp  table_value_gatherer_concept.hpp  table_value_gatherer_factory_impl.hpp  tables_gatherer.hpp  tables_header_gatherer.hpp  tables_header_gatherer_impl.hpp  typed_table.cpp  typed_table.hpp
src/tests/: CMakeLists.txt  gtest.hpp  gtest_pch.cmake  test_byte_matrix.cpp  test_cell_float_value.cpp  test_cell_int_value.cpp  test_cell_string_value.cpp  test_cell_value.cpp  test_compare_condition.cpp  test_constant_expression.cpp  test_table_content.cpp  test_table_expression.hpp  test_table_value_expression.cpp  test_table_value_gatherer.cpp  test_typed_table.cpp  test_value_gatherer.cpp
src/tests/mocks/: condition_mock.hpp  mock_condition_resolver.hpp
src/tests/sql_parser/: 14_selectExpressionOutputs.ans  16_hardSelectExpressions.ans  17_stringSimple.ans  18_stringComparisonsAndLogic.ans  19_stringMergingAndEscapes.ans  23_mixedSemanticLexicalAndValid.ans  26_twoSyntaxErrorsInOneInput.ans  6_emptyStatementsAndSpacing.ans  CMakeLists.txt  input_output_comparator.py
src/tests/sql_parser/location_tests/: 0_simpleSyntaxUnexpectedInteger.ans  4_multilineLexicalInvalidChar.ans  7_multilineMissingSeparatorSelect.ans
src/tests/sql_parser/select_literal_tests/: 10_logicOrOnly.ans  11_logicNotOnly.ans  12_logicCombinedPrecedence.ans  13_notEqualsOperator.ans  14_selectExpressionOutputs.ans  15_selectExpressionEdgeCases.ans  16_hardSelectExpressions.ans  17_stringSimple.ans  18_stringComparisonsAndLogic.ans  19_stringMergingAndEscapes.ans  1_mathSimpleComparison.ans  20_stringComplexValid.ans  21_mixedSyntaxRecoveryMultiline.ans  22_mixedSyntaxRecoverySameLine.ans  23_mixedSemanticLexicalAndValid.ans  24_ignoreUntilSemicolon.ans  25_incompleteSelectRegression.ans  26_twoSyntaxErrorsInOneInput.ans  27_keywordSeparationValidMultiline.ans  28_floatDivByZeroOutput.ans  29_floatRemByZeroOutput.ans  2_mathArithmetics.ans  31_mixedRemByZeroOutput.ans  32_selectMultipleColumns.ans  33_selectManyColumns.ans  34_selectMultipleColumnsHard.ans  35_selectAliasesSimple.ans  36_selectAliasesComplex.ans  37_selectAliasesMany.ans  38_booleanKeywordsAndNewOperators.ans  3_mathOperationOrder.ans  (+11 more)
src/tests/unit/: CMakeLists.txt  test_binary_logical_condition.cpp  test_binary_unary_math_expression.cpp  test_byte_matrix.cpp  test_cell_boolean_value.cpp  test_cell_float_value.cpp  test_cell_int_value.cpp  test_cell_string_value.cpp  test_cell_string_view_value.cpp  test_cell_value_gatherer.cpp  test_compare_condition.cpp  test_constant_expression.cpp  test_math_expression.cpp  test_select_queries.cpp  test_sql_ast_executor.cpp  test_sql_lexer_make_string.cpp  test_sql_lexer_query_content_start.cpp  test_table_value_expression.cpp  test_table_value_gatherer.cpp  test_typed_table.cpp  test_unary_logical_condition.cpp
(+70 files in other folders)
